tester/testsuite/bad/bad061.jl
int main() {
  double x = 1.1;
  x++; // this should only work for int
  return 1;
}
